Adding attribute to generated article xml

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta name="author" content=""/>
     <meta name="description" content="Export articles from Crossref Issue XML"/>
-    <title>Crossref XML Editor</title>
+    <title>Crossref - Article from Issue XML</title>
 
     <!-- Favicons -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon"/>
